edit images checked

--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.0",
+    "@aws-sdk/lib-storage": "^3.658.0",
     "@fal-ai/serverless-client": "^0.14.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.11.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
